capture interesting facts about the management of the asset but is not intended to
be all-inclusive or apply to all assets. E.g. there would be no selection if a person
was the affected asset.
 * Removes the existing physical.vector enumeration and renames physical.location to
physical.vector. Some of the values from the old physical.vector are now in
physical.variety.

Enumeration changes
-------------------

  * Renamed Sabotage to Destruction in action.physical.variety
  * Renamed Embezzlement to Possession abuse in action.misuse.variety
  * Added Digital certificate to attribute.confidentiality.data.variety
  * Added S - Unknown to asset.variety
  * Added Virtual currency to attribute.confidentiality.data.variety
  * Added Source code to attribute.confidentiality.data.variety
  * Renamed Misappropriation to Repurpose
  * Added Defacement to attribute.integrity.variety
  * Added Pass-the-hash to hacking.variety
  * Added Secondary to actor.motive
  * Added Software update to malware.vector
  * Added Skimmer to action.physical.variety
 * Adds many new enumerations to discovery_method, including some for incidents
discovered by a partner organization.

Version 1.2
===========

Schema changes
--------------
  * Removed investigation date completely
  * Added field for target section, called "targeted" (not required)
  * Replaced "personal" boolean with "ownership" field for enumeration
listing
  * Changed "management" boolean into enumeration listing
  * Changed "hosting" boolean into enumeration listing
  * Added field "accessibility" for enumeration listing, for where the
asset is in the network (internal facing or internet facing, etc),
will not be associated on a per asset basis.
  * Changed "asset" to be required
  * Make attribute section not required (near miss, false alarms, etc)
  * Change "security_compromise" to "security_incident" to make it more
clear what this variable tracks. This essentially asks "Was this