@@ -33,9 +33,7 @@
         ],
         "data_disclosure": "Yes",
         "data_total": 1,
-        "data_victim": [
-          "Other"
-        ],
+        "data_victim": [],
         "notes": "test",
         "state": [
           "Stored"
@@ -52,6 +50,6 @@
       }
     }
   },
-  "message": "Valid incident with all confidentiality values set. Test should pass.",
-  "should": "pass"
+  "message": "attribute.confidentiality.data_victim is empty []. test should fail.",
+  "should": "fail"
 }
