@@ -24,6 +24,8 @@ was the affected asset.
  * Removes the existing physical.vector enumeration and renames physical.location to
 physical.vector. Some of the values from the old physical.vector are now in
 physical.variety.
+ * Adds attribute.confidentiality.data_victim to capture who was affected by the
+breach: customers, patients, employees, etc.
 
 Enumeration changes
 -------------------
